project/stage/testing/semantic/semantic_tests/reject/assign_int_tofloat2.ul
void main() {
    float f;
    int i;
    f = i;
}
